--- a/src/front/styles/Navbar.css
+++ b/src/front/styles/Navbar.css
@@ -27,6 +27,7 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+    white-space: nowrap;
   }
   
   .fa-typo3 {
@@ -84,18 +85,19 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
+      height: 30vh;
       position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
+      top: 0;
+      left: 0;
+      opacity: 0;
       transition: all 0.5s ease;
+      transform: translateY(-100%);
     }
   
     .nav-menu.active {
       background: #242222;
-      left: 0;
       opacity: 1;
+      transform: translateY(0);
       transition: all 0.5s ease;
       z-index: 1;
     }
@@ -114,23 +116,24 @@
     }
   
     .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
+      position: static;
+      transform: none;
+      display: flex;
+      align-items: center;
+      justify-content: start;
     }
   
     .menu-icon {
       display: block;
       position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
+      top: 20px;
+      right: 20px;
       font-size: 1.8rem;
       cursor: pointer;
+      z-index: 1002;
     }
   
-    .fa-times {
+    .fa-times, .fa-bars {
       color: #fff;
       font-size: 2rem;
     }
@@ -155,4 +158,8 @@
       color: #242424;
       transition: 250ms;
     }
+  }
+
+  .nav-menu.active .menu-icon .fa-time{
+    display: block;
   }
