--- a/src/front/styles/Login.css
+++ b/src/front/styles/Login.css
@@ -1,8 +1,6 @@
 .container {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    
-   
     font-size: 1.2rem;
-   
     z-index: 999;
+    margin-bottom: 20px;
   }
