--- a/src/front/styles/Login.css
+++ b/src/front/styles/Login.css
@@ -1,6 +1,56 @@
-.container {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    font-size: 1.2rem;
-    z-index: 999;
-    margin-bottom: 20px;
-  }
+.login-container {
+  width: 100%;
+  max-width: 600px;
+  margin: 100px auto;
+  padding: 30px;
+  background-color: #2b2a2a;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+.login-container h2 {
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+.login-input-field {
+  width: calc(100% - 24px);
+  padding: 12px;
+  margin-bottom: 20px;
+  border: 1px solid #444;
+  border-radius: 5px;
+  background-color: #2b2a2a;
+  color: #fff;
+  outline: none;
+}
+
+.login-input-field::placeholder {
+  color: #999;
+}
+
+.login-submit-button {
+  width: calc(100% - 24px); 
+  padding: 15px 0;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #6c757d;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  outline: none;
+}
+
+.login-submit-button:hover {
+  background-color: #5a6268;
+}
+
+.login-forgot-password-link {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.login-forgot-password-link:hover {
+  color: #ccc;
+}
