--- a/src/front/styles/CustomerDashboard.css
+++ b/src/front/styles/CustomerDashboard.css
@@ -62,6 +62,7 @@
     outline: none !important;
     cursor: pointer !important;
     display: inline-block;
+    margin-bottom: 20px !important;
 }
 
 .dashboard-table {
