--- a/src/front/styles/Button.css
+++ b/src/front/styles/Button.css
@@ -24,6 +24,16 @@
      transition: all 0.3s ease-out;
      margin-bottom: 1em;
  }
+
+ .sub-btn--outline{
+        background-color: transparent;
+        color: #fff;
+        padding: 10px 22px;
+        border: 1px solid var(--primary);
+        transition: all 0.3s ease-out;
+        margin-bottom: 1em;
+        margin-top: 11px;
+    }
  
  .btn--medium{
      padding: 6px 16px;
