--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -66,7 +66,7 @@
     font-size: 12px;
     font-weight: 700;
     color: #fff;
-    background-color: #1f98f4;
+    /* background-color: #1f98f4; */
     box-sizing: border-box;
   }
   
@@ -94,9 +94,15 @@
   }
   
   .cards__item__text {
+    font-family: 'Poppins', sans-serif;
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
+    text-align: center;
+    text-shadow: 2px, 2px, 4px, rgba(0,0,0,0.3);
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
   }
   
   @media only screen and (min-width: 1200px) {
